# ETL-service

./: .dockerignore  .env.exemple  README.md  docker-compose.local.yml  pyproject.toml
core/configs/: __init__.py  elastic.py  postgres.py
core/db/init/: initdb.sh
etl/: Dockerfile  config.py  entrypoint.sh  main.py
etl/helpers/: extractor.py  loader.py  transformer.py
infra/: docker-compose.local.yml
infra/nginx/: nginx.conf
infra/nginx/configs/: site.conf
postgres/: entrypoint.sh
src/core/configs/: postgres.py
src/core/db/: elastic.py
src/etl/: Dockerfile  entrypoint.sh  main.py
src/etl/config/: base.py  genres.py  movies.py  persons.py
src/etl/genres/: transformer.py
src/etl/helpers/: extractor.py  loader.py  state.py  transformer.py
src/etl/movies/: transformer.py
src/etl/persons/: transformer.py
